Add support for showing progress bar in app Update tests